--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "lite-server": "^2.3.0",
     "node-sass": "^4.7.2",
+    "postcss-fixes": "^2.0.1",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
@@ -36,6 +37,9 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "ie > 10"
-  ]
+    "ie > 9"
+  ],
+  "dependencies": {
+    "normalize.css": "^8.0.0"
+  }
 }
